--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -345,11 +345,14 @@ We argue that so far no single best solution exists and give directions for the 
 \end{abstract}
 
 % A category with the (minimum) three required fields
-\category{H.4}{Information Systems Applications}{Miscellaneous}
+\category{F.4.3}{Mathematical Logic and Formal Languages}[formal languages]
+\category{I.2.4}{Artificial Intelligence}{Knowledge Representation Formalisms and Methods}
+\category{I.2.11}{Artificial Intelligence}{Distributed Artificial Intelligence}
+%\category{H.4}{Information Systems Applications}{Miscellaneous}
 %A category including the fourth, optional field follows...
-\category{D.2.8}{Software Engineering}{Metrics}[complexity measures, performance measures]
+%\category{D.2.8}{Software Engineering}{Metrics}[complexity measures, performance measures]
 
-\terms{Theory}
+\terms{Languages}
 
 \keywords{RDF Validation, RDF Constraint Types, Data Quality, Reasoning, OWL, RDF Validation Requirements, Linked Data, Semantic Web} % NOT required for Proceedings
 
