--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -1112,7 +1112,7 @@ Validation, however, is not the primary purpose of its design which has lead to 
 %There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}\\ \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if \emph{OWL 2} should be used for RDF validation.
 %However, OWL 2 is high-level  expressive  language with a compact human-readable syntax.
 In practice, however, \emph{OWL 2} is well-spread and \emph{RDFS}/\emph{OWL 2} constructs are widely used to tell people and applications about how valid instances should look like.
-\emph{RDF} documents follow the syntactic structure and semantics of \emph{RDFS}/\emph{OWL 2} ontologies which can therefore be reused for validation. 
+In general, \emph{RDF} documents follow the syntactic structure and semantics of \emph{RDFS}/\emph{OWL 2} ontologies which can therefore be reused for validation. 
 %In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy.\tb{the following example is not about solving the redundancy problem, it is about how constraint violations cab be resolved when performing reasoning / we should delete this sentence here, as we starting talking about redundancy problem below}  
 %The knowledge representation formalism {\em Description logics} (\emph{DL}), with its well-studied theoretical properties, 
 %provides the foundational basis for \emph{OWL}. 
@@ -1121,9 +1121,9 @@ In practice, however, \emph{OWL 2} is well-spread and \emph{RDFS}/\emph{OWL 2} c
 
 Reasoning is beneficial for \emph{RDF} validation as 
 (1) it may resolve constraint violations, 
-(2) it may cause useful constraint violations, and 
+(2) it may cause useful violations, and 
 (3) it solves the \emph{redundancy} problem. 
-Consider the following \emph{DL} knowledge base $\mathcal{K}$ which is a collection of formal statements  which corresponds to \emph{facts} or  \emph{what is known} explicitly:
+Consider the following \emph{DL} knowledge base $\mathcal{K}$ - a \emph{DL} knowledge base is a collection of formal statements  which correspond to \emph{facts} or  \emph{what is known} explicitly:
 {\scriptsize
 \begin{center}
 \begin{DL} 
@@ -1157,7 +1157,7 @@ we conclude that \emph{Mark Twain} is a \emph{person}.
 %The statement \ms{Book $\sqsubseteq \forall$ author.Person } says \emph{Books can have only persons as authors}. 
 %Furthermore, we know that {\em Huckleberry-Finn} is a book  (i.e., \ms{Book(Huckleberry-Finn)}) and Mark Twain is the author of this book (\ms{author(Huckleberry-Finn, Mark-Twain)}.  
 As \emph{Mark Twain} is not explicitly defined to be a \emph{person}, however, a violation is raised.
-(1) Reasoning may resolve violations. If we apply reasoning before validating, the violation is resolved since the implicit triple {\small\ms{Person(Mark-Twain)}} is inferred. 
+(1) Reasoning may resolve violations. If we apply reasoning before validating, the violation is resolved since the implicit triple {\small\ms{Person(Mark-Twain)}} is inferred and therefore made explicitly available. 
 (2) Reasoning may cause additional violations needed to enhance data quality.
 As \emph{books} are \emph{publications} {\small\ms{(Book $\sqsubseteq$ Publication),}} constraints on \emph{publications} are also validated for \emph{books} 
 %(e.g. each \emph{publication} must have a \emph{publisher}) 
@@ -1165,12 +1165,13 @@ which may result in further valuable violations.
 As each \emph{publication} must have a \emph{publisher}, e.g., a \emph{book} is a \emph{publication}, {\em Huckleberry-Finn} is a \emph{book}, and {\em Huckleberry-Finn} does not have a \emph{publisher}, 
 an additional violation occurs.
 This violation would not have been raised without reasoning before actually validating and 
-thus increases data quality in case the violation is tackled.
+thus data quality would not be increased in case the violation is tackled.
 (3) The major shortcoming of classical constraint languages is \emph{redundancy} which is solved by \emph{OWL 2} with its open-world semantics (see first paragraph in Section \ref{motivation}). 
 %\tb{there is no example for solving redundancy problem / can we use the one of the introduction (just referring to this example in 1 sentence)}
 %\tb{we have no example why R causes new valuable constraint violations}
 
 %\tb{the next 2 paragraphs are about differences in semantics}
+Validation and reasoning assume different semantics which may lead to different results when particular constraint types are used for validation and for reasoning.
 Reasoning in \emph{OWL 2} is based on the {\em open-world assumption} (\emph{OWA}), i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose to represent knowledge on the \emph{WWW}. 
 %Most of the constraint languages except OWL, have a major shortcoming of redundancy.
 %With its open-world semantics, used as a constraint language, OWL solves the redundancy problem. 
@@ -1179,11 +1180,11 @@ Reasoning in \emph{OWL 2} is based on the {\em open-world assumption} (\emph{OWA
 As each \emph{book} must have a \emph{title} {\small\ms{(Book $\sqsubseteq \exists$ title.$\top$)}} and {\em Hamlet} is a \emph{book} {\small\ms{(Book(Hamlet)),}}
 {\em Hamlet} must have at least one \emph{title}.
 In an \emph{OWA} setting, this axiom does not cause a violation, even if there is no explicitly defined \emph{title}, since there must be a \emph{title} for this \emph{book} which we may not know ($\mathcal{K}$ is consistent).
-Hence, \emph{OWA} would be a shortcoming in RDF validation.  
-Many RDF validation scenarios require the {\em closed-world assumption} (\emph{CWA}), i.e., a statement is inferred to be false if it cannot be proved to be true.
-Classical constraint languages are based on \emph{CWA} where constraints need to be satisfied only by named individuals 
-which yields in return to a violation in the example since there is no explicitly defined \emph{title} for the \emph{book} {\em Hamlet}. 
-\emph{OWL 2} is based on the {\em non-unique name assumption} (\emph{nUNA}) whereas RDF validation requires that different names represent different objects ({\em unique name assumption} (\emph{UNA})) (for a detailed distinction see Section \ref{CWA-UNA-dependency}). 
+\emph{OWA} would be a shortcoming in RDF validation and thus  
+many RDF validation scenarios require the {\em closed-world assumption} (\emph{CWA}), i.e., a statement is inferred to be false if it cannot be proved to be true.
+Classical constraint languages are based on \emph{CWA} where constraints need to be satisfied only by named individuals. 
+\emph{CWA} yields in return to a violation in the example since there is no explicitly defined \emph{title} for the \emph{book} {\em Hamlet}. 
+Furthermore, \emph{OWL 2} is based on the {\em non-unique name assumption} (\emph{nUNA}) whereas RDF validation requires that different names represent different objects ({\em unique name assumption} (\emph{UNA})) (for a detailed distinction see Section \ref{CWA-UNA-dependency}). 
 %There is a clash caused by the functional property {\em title} {\small\ms{(funct (title))}} and the \emph{UNA},
 %since the book {\em Huckleberry-Finn} has more than one title
 %{\small\ms{(title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)}}, {\small\ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn))}}.
@@ -2523,7 +2524,6 @@ The first solution is applied on local knowledge bases whereas the second is mor
 %Constraint types can either be dependent on the CWA with UNA ($\mathcal{C}_{CWA}$), when it makes a difference if the CWA/UNA or the OWA/nUNA is assumed, or independent on the CWA with UNA ($\overline{\mathcal{C}_{CWA}}$).
 %We distinguish two disjoint sets of constraint types $\mathcal{C}_{R}$ ({\em constraints with reasoning}) and $\overline{\mathcal{CT}_{R}}$ ({\em constraints without reasoning}).
 %For each of them, we presented representative constraint types to investigate the effects of reasoning to the validation process.
-Regarding the performance of constraints, we refer to worst case complexity.
 
 %We divide $\mathcal{CT}_R$ into two not disjoint classes ($\mathcal{C}_R ^{\mathcal{QL}} \subseteq \mathcal{C}_R ^{\mathcal{DL}}$) for the validation by query answering with OWL 2 QL and OWL 2 DL reasoning respectively.
 %It is well known that performing SPARQL queries is in \textsc{Pspace}-Complete \cite{Perez2009}, 
@@ -2535,6 +2535,29 @@ Regarding the performance of constraints, we refer to worst case complexity.
 %All supported constraint types are already implemented by particular constraint languages (except for SPIN).
 
 %Another important finding is that, none of other languages covers the other so far in terms of expressivity.
+
+We investigated the role that reasoning plays in practical data validation and 
+how to overcome the major shortcomings when validating RDF data by performing reasoning prior to validation.
+Reasoning is beneficial for \emph{RDF} validation as 
+(1) it may resolve violations, 
+(2) it may cause valuable violations, and 
+(3) it solves the \emph{redundancy} problem (Section \ref{the-role-of-reasoning-for-rdf-validation}).
+
+We published by today 81 requirements to formulate RDF constraints that are required by various stakeholders for data applications.
+Each of these requirements corresponds to a constraint type.
+We recently published a technical report
+%\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} 
+(serving as appendix of this paper) 
+in which we explain each requirement/constraint type in detail and give examples for each represented by different constraint languages.
+This technical report also contains mappings to \emph{DL}
+to determine which \emph{DL} constructs are needed to express each constraint type
+and therefore to provide the foundational basis for constraint types \cite{BoschNolleAcarEckert2015}.
+
+-----
+
+Regarding the performance of constraints, we refer to worst case complexity.
+
+-----
 
 We use \emph{SPIN}, 
 a \emph{SPARQL}-based way to formulate and check constraints, as basis to develop a
